overflow fix

--- a/src/styles/Account.css
+++ b/src/styles/Account.css
@@ -1,4 +1,5 @@
 .account {
+	height: 100%;
 	width: 100%;
 	max-width: 1200px;
 	padding: 2rem 1rem 1rem;
@@ -6,7 +7,8 @@
 	display: flex;
 	flex-direction: row;
 	gap: 1rem;
-	/* flex-wrap: wrap-reverse; */
+
+	overflow-y: overlay;
 }
 
 .primary-col {
@@ -16,16 +18,22 @@
 
 	display: flex;
 	flex-direction: column;
+	justify-content: start;
 	gap: 1rem;
 }
 
 .primary-col > * {
+	/* max-height: 50%; */
 	flex-basis: 100%;
 	padding: 1rem;
-	/* margin-right: 1rem; */
 
 	border-radius: 0.5rem;
 	border: 1px solid rgb(229, 232, 235);
+	overflow-y: overlay;
+}
+
+.orders {
+	overflow-y: overlay;
 }
 
 .transaction-list .order-item {
