--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -44,7 +44,7 @@ body {
 }
 
 .container {
-	min-height: calc(100vh - 72px);
+	height: calc(100vh - 72px);
 	display: flex;
 	justify-content: center;
 	overflow-y: overlay;
